libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/type-expr-call-arbitrary.jsonc
//@ run: fail
//@ description: calling an arbitrary function should result in a compile error
[
  "::kernel::special_form::as",
  { "#literal": true },
  ["::core::math::headpat", "Integer", "Number"]
  //~^ ERROR cannot find type `headpat` in module `::core::math`
]
